--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,11 @@
 version: '3.2'
 services:
-  gp-backend:
-    container_name: gp-backend
-    image: gp-backend:1.0.0
+  generate-password:
+    container_name: generate-password
+    image: generate-password:1.0.0
     build:
       context: .
       dockerfile: 'Dockerfile'
     ports:
       - '3000:3000'
-    networks:
-      - gp-network
-networks:
-  gp-network:
-    driver: bridge
 
